# puppetty

./: .gitignore  CODE_SIGNING.md  DESIGN.md  LICENSE  README.ai.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: engine-ci.yml  gui-ci.yml  gui-release.yml  npm-release.yml
demo/: decider-echo.js  freeform-demo.js  password-demo.js  prompt-demo.js
docs/: demo.tape  make-demo.ps1  vhs.Dockerfile
engine-rs/: Cargo.toml  README.md
engine-rs/examples/: decider_echo.rs  freeform_demo.rs  password_demo.rs  prompt_demo.rs
engine-rs/src/: autopilot.rs  client.rs  credentials.rs  decider.rs  eventlog.rs  export.rs  keyexpand.rs  main.rs  mcp.rs  policy.rs  protocol.rs  raster.rs  screen.rs  server.rs  session.rs  svg.rs
engine-rs/tests/: detached_eof.rs
gui/: README.md  package-lock.json  package.json
gui/scripts/: install-gui.ps1  install-gui.sh  make-icon.ps1  vendor.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/ui/: index.html  style.css
gui/ui/js/: i18n.js  main.js  math-overlay.js
src/: autopilot.js  client.js  credentials.js  decider.js  eventlog.js  keyexpand.js  mcp.js  policy.js  screen.js  session.js
