[package]
name = "puppetty-gui"
version = "0.2.0-beta.2"
edition = "2021"
description = "puppetty — controllable terminal sessions for AI agents"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "process", "macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
