[package]
name = "puppetty-gui"
version = "0.3.0"
edition = "2021"
description = "puppetty — controllable terminal sessions for AI agents"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "process", "macros", "rt-multi-thread"] }
fontdb = "0.23.0"

[profile.release]
strip = true
lto = true
